resources/istio/gateway-internal.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: ui
        protocol: HTTP
      hosts:
        - observe-ui.example-api.com
        - observe-api.example-api.com
