resources/istio/destination-rules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: angular-ui
spec:
  host: angular-ui.dev.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: 1.6.0
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: service-a
spec:
  host: service-a.dev.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: 1.6.5
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: service-b
spec:
  host: service-b.dev.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: 1.6.5
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: service-c
spec:
  host: service-c.dev.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: 1.6.5
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: service-d
spec:
  host: service-d.dev.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: 1.6.5
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: service-e
spec:
  host: service-e.dev.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: 1.6.5
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: service-f
spec:
  host: service-f.dev.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: 1.6.5
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: service-g
spec:
  host: service-g.dev.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: 1.6.5
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: service-h
spec:
  host: service-h.dev.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: 1.6.5
