resources/istio/external-mesh-amazon-mq-internal.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: amazon-mq-external-mesh
spec:
  hosts:
  - b-cb06a2f2-a425-4718-8ba6-b7e50fea0cce.mq.us-east-1.amazonaws.com
  ports:
  - name: rabbitmq
    number: 5671
    protocol: TCP
  location: MESH_EXTERNAL
  resolution: NONE
